Fixed bug: nav z-index

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -3,7 +3,7 @@
   position: fixed;
   width: 100vw;
   min-height: 10vh;
-  z-index: 1;
+  z-index: 10;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
 #brand-img {
